--- a/threads.tmpl
+++ b/threads.tmpl
@@ -12,6 +12,7 @@ Ahmed Mohamed Ahmed Abdallah  -  es-AhmedMohammed2025@alexu.edu.eg
 Marwan Essam eldien Rashad    -  es-MarwanEssam2025@alexu.edu.eg
 Youssef emad mohamed habib    -  es-YoussefEmad2025@alexu.edu.eg
 Abdulrahman Aladdin Essayed   -  es-Abdel-RahmanAladdin2025@alexu.edu.eg
+Abdallah Samy Talha           -  es-AbdullahSami2025@alexu.edu.eg
 FirstName LastName <email@domain.example>
 
 ---- PRELIMINARIES ----
